@@ -6,6 +6,7 @@ import com.trendistashop.services.impl.product.ProductService;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.util.Comparator;
@@ -19,18 +20,40 @@ import java.util.stream.Collectors;
 public class CartResponseDTO {
     private UUID id;
     private BigDecimal cartTotal;
-    private List<CartItemDTO> items;
-
+    // Có thể là List<CartItemDTO> hoặc PageDTO<CartItemDTO>
+    private Object items;
+    // === OPTION 1: Không phân trang ===
     public static CartResponseDTO fromEntity(Cart cart, ProductService productService) {
-        CartResponseDTO dto = new CartResponseDTO();
         List<CartItem> sortedItems = cart.getCartItems().stream()
                 .sorted(Comparator.comparing(CartItem::getCreatedAt).reversed())
-                .collect(Collectors.toList());
-        dto.setId(cart.getId());
-        dto.setCartTotal(cart.getCartTotal());
-        dto.setItems(sortedItems.stream()
+                .toList();
+
+        List<CartItemDTO> itemDTOs = sortedItems.stream()
                 .map(item -> CartItemDTO.fromEntity(item, productService))
-                .collect(Collectors.toList()));
-        return dto;
+                .collect(Collectors.toList());
+
+        return new CartResponseDTO(cart.getId(), cart.getCartTotal(), itemDTOs);
+    }
+
+    // === OPTION 2: Có phân trang ===
+    public static CartResponseDTO fromEntity(Cart cart, ProductService productService, Pageable pageable) {
+        List<CartItem> sortedItems = cart.getCartItems().stream()
+                .sorted(Comparator.comparing(CartItem::getCreatedAt).reversed())
+                .toList();
+
+        int start = Math.min((int) pageable.getOffset(), sortedItems.size());
+        int end = Math.min(start + pageable.getPageSize(), sortedItems.size());
+
+        List<CartItemDTO> pagedItems = sortedItems.subList(start, end).stream()
+                .map(item -> CartItemDTO.fromEntity(item, productService))
+                .collect(Collectors.toList());
+
+        PageDTO<CartItemDTO> pageDTO = new PageDTO<>();
+        pageDTO.setPage(pageable.getPageNumber());
+        pageDTO.setSize(pageable.getPageSize());
+        pageDTO.setTotal(sortedItems.size());
+        pageDTO.setTotalPage((int) Math.ceil((double) sortedItems.size() / pageable.getPageSize()));
+        pageDTO.setContent(pagedItems);
+        return new CartResponseDTO(cart.getId(), cart.getCartTotal(), pageDTO);
     }
 }
